--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,24 +4,19 @@
 <meta charset="ISO-8859-1"/>
 <title>Insert title here</title>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-route.js"></script>
 <script src="./js/app.js"></script>
+<script src="./js/controller/cliente-controller.js"></script>
+<script src="./js/controller/cidade-controller.js"></script>
+<script src="./js/controller/estado-controller.js"></script>
+
 
 </head>
-<body ng-controller="clienteController">
-{{cliente.nome}}<br/>
-<input type="text" ng-model="cliente.nome"/>
+<body >
+<a href="/#!/clientes">Cadastro de clientes</a>
 
-<input type="button" value="Salvar" ng-click="salvarClientes()"/>
-<input type="button"  value="Cancelar" ng-click="cancelarClientes()"/>
-<div ng-repeat="cli in Clientes">
-{{'Id:'+ cli.id +'-'+'Nome:' +cli.nome}} 
-<input type="button"  value="Remover" ng-click="removerClientes(cli)"/>
-<input type="button"  value="Alterar" ng-click="alterarClientes(cli)"/>
-
-</div>
-
-
-
+<a href="/#!/estados">Cadastro de estados</a>
+<div ng-view="ng-view"></div>
 </body>
 
 </html>
